syntax = "proto2";

package com.thesamet.proto.e2e;

import "scalapb/scalapb.proto";

option (scalapb.options) = {
  enum_strip_prefix: true
};

enum MyEnum3 {
    MY_ENUM3_V1 = 0;
}
